# DASHBOARDTOOL

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  todo.txt
docs/: gui_architecture.md  module_standards.md  structure_overview.md  user_and_developer_guide.md
modules/: base.py  debug.py  notes.py
modules/php/: status_panel.php
src/dashboardtool/: __init__.py  __main__.py  cli.py  config.py  frontend.py  gui.py  layout.py  logging.py  themes.py
tests/: test_config.py  test_debug_module.py  test_frontend.py  test_gui_app.py  test_logging_utils.py  test_module_tile.py  test_notes_module.py  test_php_syntax_check.py  test_venv_setup.py
tools/: __init__.py  php_syntax_check.py  venv_setup.py
